# poster

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: build.yml
migrations/: 0001_init.sql
src/: main.rs
src/app/: error.rs  http.rs  mod.rs  params.rs  state.rs
src/init/: error.rs  mod.rs  params.rs  utils.rs
src/post/: entity.rs  mod.rs  sqlite.rs  store.rs  traits.rs
src/session/: entity.rs  mod.rs  store.rs
static/: styles.css
templates/: not-found.html  password.html  post.html
