[package]
name = "poster"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
clap = { version = "4.5.43", features = ["derive"] }
comrak = "0.41.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.0", features = ["v4"] }
